[package]
name = "neemo"
version = "0.1.3"
edition = "2021"
authors = ["Samuel Aondo  "]
description = "A lightweight NoSQL key-value database powered by sled. For queries send them to levidevi61@gmail.com"
license = "MIT"
repository = "https://github.com/sazalo101/neemo-db"
homepage = "https://github.com/sazalo101/neemo-db"
readme = "README.md"
categories = ["database"]
keywords = ["database", "nosql", "key-value", "rust"]

[dependencies]
sled = "0.34"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
log="0.4"
simplelog = "0.12.0"
raft-rs = { version = "0.1", optional = true }
bson = { version = "0.11", optional = true }

